fix: 리뷰 테이블 수정